<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/verPedidoCoordinator"
	tools:context=".VerPedidoActivity">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<android.support.v7.widget.RecyclerView
			android:id="@+id/verPedidoRecyclerView"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:visibility="visible"
			app:layout_behavior="@string/appbar_scrolling_view_behavior"
			app:layout_constraintBottom_toTopOf="@+id/pedidoOverview"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="spread_inside" />

		<TextView
			android:id="@+id/txtVerPedidoEmpty"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="8dp"
			android:text="@string/no_articulos"
			android:textAlignment="center"
			android:textSize="14sp"
			android:visibility="gone"
			app:layout_behavior="@string/appbar_scrolling_view_behavior"
			app:layout_constraintBottom_toTopOf="@+id/pedidoOverview"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<android.support.constraint.ConstraintLayout
			android:id="@+id/pedidoOverview"
			android:layout_width="match_parent"
			android:layout_height="112dp"
			android:background="#CCCCCC"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/verPedidoRecyclerView">

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:text="@string/total"
				android:textSize="18sp"
				app:layout_constraintBottom_toTopOf="@+id/textView5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_chainStyle="spread" />

			<TextView
				android:id="@+id/textView5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:text="@string/cantidad"
				android:textSize="18sp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView2" />

			<Button
				android:id="@+id/btnConfirmarPedido"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:background="@color/colorAccent"
				android:elevation="4dp"
				android:padding="24dp"
				android:text="@string/confirmar_npedido"
				android:textColor="#FFFFFF"
				android:textSize="18sp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/txtPrecioTotal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:text="$12249.50"
				android:textSize="24sp"
				app:layout_constraintBottom_toBottomOf="@+id/textView2"
				app:layout_constraintEnd_toStartOf="@+id/btnConfirmarPedido"
				app:layout_constraintHorizontal_bias="1.0"
				app:layout_constraintStart_toEndOf="@+id/textView2"
				app:layout_constraintTop_toTopOf="@+id/textView2"
				/>

			<TextView
				android:id="@+id/txtCantidadTotal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="16dp"
				android:text="332"
				android:textSize="18sp"
				app:layout_constraintBottom_toBottomOf="@+id/textView5"
				app:layout_constraintEnd_toStartOf="@+id/btnConfirmarPedido"
				app:layout_constraintHorizontal_bias="1.0"
				app:layout_constraintStart_toEndOf="@+id/textView5"
				app:layout_constraintTop_toTopOf="@+id/textView5" />
		</android.support.constraint.ConstraintLayout>

	</android.support.constraint.ConstraintLayout>

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<android.support.v7.widget.Toolbar
			android:id="@+id/verPedidoToolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@color/colorPrimary"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

	</android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>