<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".SeleccionarArticuloActivityV2">

	<android.support.v7.widget.RecyclerView
		android:id="@+id/lineasRecyclerView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorPrimary"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		android:visibility="gone" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/seleccionarArticuloRecyclerView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior" />

	<TextView
		android:id="@+id/txtSeleccionarArticuloEmpty"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="8dp"
		android:text="@string/no_hay_ning_n_art_culo_para_seleccionar"
		android:textAlignment="center"
		android:textSize="14sp"
		android:visibility="gone"
		app:layout_behavior="@string/appbar_scrolling_view_behavior" />

	<ProgressBar
		android:id="@+id/seleccionarArticuloProgressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center" />

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<android.support.v7.widget.Toolbar
			android:id="@+id/seleccionarArticuloToolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@color/colorPrimary"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

		<android.support.constraint.ConstraintLayout
			android:id="@+id/btnLineaLayout"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@color/colorPrimary"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<Button
				android:id="@+id/btnLinea"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/transparent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/txtLineaIndicador"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"
				android:ellipsize="end"
				android:text="@string/linea"
				android:textColor="@android:color/white"
				android:textSize="18sp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_chainStyle="packed"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/signalDropDown"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:contentDescription="@string/abajo"
				android:src="@drawable/baseline_arrow_drop_down_24"
				android:tint="@android:color/white"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toEndOf="@id/txtLineaIndicador"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/signalEraseFilter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:contentDescription="@string/abajo"
				android:src="@drawable/baseline_cancel_24"
				android:tint="@android:color/white"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toEndOf="@id/txtLineaIndicador"
				app:layout_constraintTop_toTopOf="parent" />

		</android.support.constraint.ConstraintLayout>
	</android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>